# approval

./: .env.schema  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  gunicorn_config.py  pyproject.toml  run.py
.github/workflows/: build-publish-trigger.yml
.gitlab/merge_request_templates/: default.md
app/: api_registry.py  config.py  main.py
app/commons/logger_services/: formatter.py  logger_factory_service.py  namespace_declare.py
app/commons/meta_services/: __init__.py
app/commons/neo4j_services/: __init__.py
app/commons/notifier_service/: email_service.py
app/commons/pipeline_ops/: copy.py
app/commons/project_services/: __init__.py
app/commons/psql_services/: __init__.py
app/models/: base.py  copy_request.py  copy_request_sql.py
app/resources/: error_handler.py
app/routers/: api_root.py
app/routers/v1/api_copy_request/: api_copy_request.py  request_notify.py
app/routers/v1/api_health/: api_health.py
logs/: api_copy_request.log.2022-05-26
migrations/: env.py
migrations/scripts/: create_approval_db.sql
migrations/versions/: 396048c16b59_adding_copy_request_tables.py
tests/: conftest.py  prepare_test.py  pytest.ini  test_copy_approval.py
tests/routers/v1/: test_copy_approval.py
